# praktik-ai

./: .dockerignore  .env_example  .gitignore  LICENSE  Makefile  README.md  compose.yml  env_example  package-lock.json
api/: Dockerfile  pyproject.toml
api/app/: config.py  database.py  main.py  models.py
api/app/chatbot/: __main__.py
api/app/src/: routers.py
api/app/src/activities/: controllers.py  routers.py  schemas.py
api/app/src/courses/: controllers.py  routers.py  schemas.py
api/app/src/modules/: controllers.py  routers.py  schemas.py
api/chatbot/: __main__.py
backend/: Dockerfile  pyproject.toml
backend/agents/: __init__.py  vector_store.py
backend/agents/assessment_evaluator/: __init__.py  graph.py  service.py  state.py
backend/agents/assessment_evaluator/nodes/: __init__.py  evaluate_answer.py  load_context.py  persist_result.py
backend/agents/assessment_generator/: __init__.py  graph.py  service.py  state.py
backend/agents/assessment_generator/nodes/: __init__.py  generate_question.py  load_context.py  persist_session.py
backend/agents/base/: llm.py
backend/agents/base/loaders/: base.py  docx_file.py  markdown.py
backend/agents/course_generator/: __init__.py  __main__.py  graph.py  service.py  state.py
backend/agents/course_generator/nodes/: __init__.py  load_data.py  load_data_db.py  planner.py  save_to_db.py  summarize.py
backend/agents/embedding_generator/: __init__.py  graph.py  service.py  state.py
backend/agents/embedding_generator/nodes/: __init__.py  generate_embeddings.py  load_course_data.py  save_embeddings.py
backend/agents/mentor/: graph.py  service.py  state.py
backend/agents/mentor/nodes/: __init__.py  generate_answer.py  load_learn_block_data.py  rerank.py  (+1 more)
backend/agents/practice_answer_evaluator/: graph.py  service.py  state.py
backend/agents/practice_question_generator/: graph.py  service.py  state.py
backend/agents/sql_agent/: graph.py  service.py  state.py
backend/api/: audit.py  authorization.py  config.py  database.py  dependencies.py  enums.py  main.py  models.py  seed.py
backend/api/src/: routers.py
backend/api/storage/: seaweedfs.py
(+341 files in other folders)
